FIX: fixed issue with husky_ark_armlab.py not being found
I needed to add the script to the CMakeLists.txt and also change
its type to be husky_ark_armlab.py from husky_ark_armlab.
I also needed to chmod +x husky_ark_armlab.py

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,6 +165,11 @@ include_directories(
 #   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 # )
 
+catkin_install_python(PROGRAMS
+ src/husky_ark_armlab.py
+ DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
+
 ## Mark executables for installation
 ## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
 # install(TARGETS ${PROJECT_NAME}_node
