CHORE: added pyscaffold to the project
Restructured the project to use pyscaffold. Added an example test
using tox for converting euler to quaternion. Also updated
CMKAELists.txt to reflect the fact that the source code is now
nested one directory deeper.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -166,7 +166,7 @@ include_directories(
 # )
 
 catkin_install_python(PROGRAMS
- src/husky_ark_armlab.py
+ src/usky_ark_armlab/husky_ark_armlab.py
  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
