DOCS: updated repo urls to use UM-ARM-Lab repo (vs. personal)

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,10 +10,10 @@ author-email = ericwiener3@gmail.com
 license = MIT
 long-description = file: README.rst
 long-description-content-type = text/x-rst; charset=UTF-8
-url = https://github.com/pyscaffold/pyscaffold/
+url = github.com/UM-ARM-Lab/husky_ark_armlab
 # Add here related links, for example:
 project-urls =
-    Documentation = https://pyscaffold.org/
+    Documentation = https://husky-ark-armlab.readthedocs.io/en/latest/
 #    Source = https://github.com/pyscaffold/pyscaffold/
 #    Changelog = https://pyscaffold.org/en/latest/changelog.html
 #    Tracker = https://github.com/pyscaffold/pyscaffold/issues
